--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         
         <title> Index steyla </title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/index.css">
         <!-- Link de pagina de iconos-->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -76,7 +76,6 @@
                 Steyla
             </div>
         </section>
-        <script src="script.js"></script>
      
         <!-- Estructura de la pagina-->
         <section class="home" id="home">
@@ -124,5 +123,6 @@
                 </div>
             </div>
         </footer>
+        <script src="scripts/index.js"></script>
     </body>
 </html>
